deploy/k8s/app/geodjango-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: geodjango
spec:
  replicas: 1
  selector:
    matchLabels:
      app: geodjango
  template:
    metadata:
      labels:
        app: geodjango
    spec:
      containers:
      - name: geodjango
        image: geotech-web
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
        command: ["sh", "-c"]
        args:
          - gunicorn geotech.wsgi:application --bind 0.0.0.0:8000
        readinessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3 
        livenessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
