deploy/k8s/app/geodjango-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: geodjango-service
spec:
  type: NodePort
  selector:
    app: geodjango
  ports:
    - port: 80
      targetPort: 8000
      nodePort: 30008
