deploy/k8s/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: geodjango-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - geodjango.local
      secretName: geodjango-tls
      
  rules:
  - host: geodjango.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: geodjango-service
            port:
              number: 80
